--- a/src/main/resources/templates/showrecipes.html
+++ b/src/main/resources/templates/showrecipes.html
@@ -2,12 +2,13 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/4.0.0/css/bootstrap.min.css" />
+    <script src="/webjars/jquery/3.0.0/jquery.min.js"></script>
+    <script src="/webjars/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+
     <title>Recipes</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>Recipes</h1>
@@ -15,14 +16,17 @@
         <table class="table table-striped table-bordered table-hover">
             <thead class=".thead-light">
                 <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Description</th>
+                    <th>Id</th>
+                    <th>Description</th>
+                    <th>View</th>
                 </tr>
             </thead>
             <tbody>
                 <tr th:each="recipe : ${recipes}">
+                    <!--/*@thymesVar id="recipe type="com.prashanth.recipesapp.model.Recipe"*/-->
                     <td th:text="${recipe.id}">123</td>
                     <td th:text="${recipe.description}">PRashanth</td>
+                    <td><a href="#" th:href="@{'/recipe/show/' + ${recipe.id}}">View</a></td>
                 </tr>
             </tbody>
         </table>
