--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -18,7 +18,15 @@
 <!--/*@thymesVar id="recipe" type="com.prashanth.recipesapp.model.Recipe"*/-->
     <div class="container" style="margin-top: 20px">
         <div class="card">
-            <h1 class="card-header" th:text="${recipe.description}">Spicy Guacamole</h1>
+            <div class="card-header">
+                <div class="row">
+                    <h1 class="col-8" th:text="${recipe.description}">Spicy Guacamole</h1>
+                    <div class="col-4">
+                        <a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/update'}">Update</a>
+                        <a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/delete'}">Delete</a>
+                    </div>
+                </div>
+            </div>
             <div class="card-body row">
                 <div class="col">
                     <h5>Categories:</h5>
