--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -38,14 +38,23 @@
                     <h5>Source:</h5><p th:text="${recipe.source}">Simple Recipes</p>
                 </div>
                 <div class="col">
+                    <image src="../../static/images/guacamole400x400WithX.jpg"
+                           th:src="@{'/recipe/'+${recipe.id}+'/recipeimage'}"
+                           width="200" height="200"></image>
+                </div>
+                <div class="col">
                     <h5>Difficulty:</h5><p th:text="${recipe.difficulty}">Easy</p>
                     <h5>Servings:</h5><p th:text="${recipe.servings}">4</p>
                     <h5>Url:</h5><a href="#" th:text="${recipe.url}" th:href="${recipe.url}"></a>
+
                 </div>
             </div>
         </div>
         <div class="card">
-            <div class="card-header">Ingredients</div>
+            <div class="card-header">
+                <span>Ingredients</span>
+                <a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredients'}">View</a>
+            </div>
             <div class="card-body">
                 <ul class="list-group">
                     <li class="list-group-item" th:each="ingredient : ${recipe.ingredients}"
